# otel-exporter

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  README.md  compose.yaml  hacs.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  validate.yml
config/: configuration.yaml
custom_components/otel/: __init__.py  config_flow.py  const.py  diagnostics.py  manifest.json  metrics.py  otlp.py  strings.json
custom_components/otel/translations/: en.json
otel-collector/: config.yaml
scripts/: develop  test
tests/: __init__.py  test_diagnostics.py  test_metrics.py  test_otlp.py  test_setup.py
