[project]
name = "home-assistant-otel-exporter"
version = "0.2.0"
description = "Custom Home Assistant integration that exports entity state changes as OpenTelemetry metrics."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D203", # no-blank-line-before-class (incompatible with formatter)
    "D212", # multi-line-summary-first-line (incompatible with formatter)
    "COM812", # incompatible with formatter
    "ISC001", # incompatible with formatter
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ANN001",
    "ANN002",
    "ANN003",
    "PLR2004",
    "PT017",
    "S101",
    "SLF001",
]
